--- a/PizzaWebsite/Pages/Index.cshtml
+++ b/PizzaWebsite/Pages/Index.cshtml
@@ -77,7 +77,7 @@
                                     </article>
                                     <div class="d-flex">
                                         <div class="modal-input d-flex ">
-                                            <button class="decrement-btn" id="decrement-id-@pizza.PizzaId"><strong>-</strong></button>
+                                            <button class="decrement-btn isInactive" id="decrement-id-@pizza.PizzaId"><strong>-</strong></button>
                                             <label class="input-value" id="button-value-@pizza.PizzaId">1</label>
                                             <button class="increment-btn" id="increment-id-@pizza.PizzaId"><strong>+</strong></button>
                                         </div>
